tentando resolver bug overflow 2

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -471,7 +471,7 @@ footer .container {
 /* Responsividade para celular */
 @media (max-width: 767px) {
 
-  body {
+  * {
     overflow-x: hidden;
   }
 
